# nori

./: .gitignore  CMakeLists.txt
cmake/: android.toolchain.cmake  precompiled_header.cmake
cmake/modules/: FindGMock.cmake  FindGTest.cmake  FindGlew.cmake
inc/nori/: application.h  application_arguments.h  graphics_surface.h  log.h  main.h  vector2.h  window.h
inc/nori/detail/: android_application.h  android_window.h  log.h  log_priority.h  null_window.h  opengl_fwd.h  win_application.h  win_graphics_surface.h  win_window.h
include/nori/: animation.h  application.h  application_arguments.h  file.h  graphics.h  graphics_surface.h  image.h  log.h  main.h  matrix4.h  rectangle.h  renderer.h  scene.h  shader.h  shader_program.h  slicer.h  sprite.h  texture.h  texture_atlas.h  vector2.h  window.h
include/nori/detail/: android_application.h  android_file.h  android_graphics_surface.h  basic_shader.h  graphics_surface_fwd.h  image_fwd.h  image_shader.h  log.h  log_priority.h  null_window.h  opengl_fwd.h  precompiled.h  rectangle_packer.h  renderer_fwd.h  scene_fwd.h  shader_program_fwd.h  sprite_fwd.h  stl_file.h  texture_atlas_fwd.h  texture_fwd.h  win_application.h  win_graphics_surface.h  win_window.h  windows_fwd.h
samples/: CMakeLists.txt
samples/basic_animation/: .gitignore  AndroidManifest.xml  CMakeLists.txt  basic_animation.cpp
samples/basic_drawing/: AndroidManifest.xml  CMakeLists.txt  basic_drawing.cpp
samples/simple/: AndroidManifest.xml  CMakeLists.txt  simple.cpp
src/: application.cpp  graphics.cpp  graphics_surface.cpp  image.cpp  lodepng.cpp  log.cpp  log_priority.cpp  matrix4.cpp  null_window.cpp  precompiled.cpp  rectangle_packer.cpp  renderer.cpp  shader.cpp  shader_program.cpp  stl_file.cpp  texture.cpp  texture_atlas.cpp  window.cpp
src/android/: android_application.cpp  android_file.cpp  android_graphics_surface.cpp  android_log.cpp  android_window.cpp
src/lodepng/: lodepng.cpp
src/nori/: animation.cpp  image.cpp  log.cpp  log_priority.cpp  matrix4.cpp  null_window.cpp  rectangle_packer.cpp  renderer.cpp  scene.cpp  shader.cpp  slicer.cpp  sprite.cpp  stl_file.cpp  texture.cpp  texture_atlas.cpp
src/nori/android/: android_application.cpp  android_file.cpp  android_graphics_surface.cpp
src/nori/windows/: win_application.cpp  win_graphics_surface.cpp  win_window.cpp
src/windows/: win_application.cpp  win_graphics_surface.cpp  win_log.cpp  win_window.cpp
tests/: AndroidManifest.xml  CMakeLists.txt  animation_tests.cpp  application_test.cpp  file_tests.cpp  graphics_surface_test.cpp  graphics_tests.cpp  image_mock.h  image_tests.cpp  log_test.cpp  matrix_tests.cpp  nori_tests.cpp  output_printer.cpp  output_printer.h  precompiled.h  rectangle_packer_tests.cpp  rectangle_tests.cpp  rectangle_tests.h  renderer_mock.h  scene_tests.cpp  shader_program_tests.cpp  shader_tests.cpp  slicer_tests.cpp  sprite_tests.cpp  stl_file_tests.cpp  test_shaders.h  texture_atlas_tests.cpp  texture_tests.cpp  vector2_tests.cpp  win_graphics_surface_test.cpp  win_window_test.cpp  window_test.cpp
